<resources>
    <string name="app_name">Work6th</string>
    <string name="dataStructA">数据结构A</string>
    <string name="_3301">3301</string>
    <string name="next_level">Next Level</string>
    <string name="page_1">页面1</string>
    <string name="page_2">页面2</string>
    <string name="page_3">页面3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommend_theme">推荐创作主题</string>
    <string name="view_all"><![CDATA[查看全部 >]]></string>
    <string name="login">登录</string>
    <string name="welcome">你好鸭，欢迎来到掌上重邮~</string>
    <string name="username_input_hint">请输入学号</string>
    <string name="password_input_hint">统一验证码后六位/19级及以前为身份证后六位</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="btn_login">登录</string>
</resources>